加重平均と単純平均

--- a/submit.ipynb
+++ b/submit.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "加重平均された提出データ (16432, 1854) が outputs/ensemble/test2\\submission_0.07865_weighted_avg.npy に保存されました。\n"
+      "加重平均された提出データ (16432, 1854) が outputs/ensemble/test3\\submission_1.68484_weighted_avg.npy に保存されました。\n",
+      "単純平均された提出データ (16432, 1854) が outputs/ensemble/test3\\submission_1.68484_mean.npy に保存されました。\n"
      ]
     }
    ],
@@ -21,6 +22,7 @@
     "\n",
     "def weighted_average_submissions(save_folder):\n",
     "    # submission_*.npyファイルのパスを取得\n",
+    "    # submission_files = glob.glob(os.path.join(save_folder, 'submission_*_fold*_of*.npy'))\n",
     "    submission_files = glob.glob(os.path.join(save_folder, 'submission_*_fold*.npy'))\n",
     "    if not submission_files:\n",
     "        print(\"提出ファイルが見つかりません。\")\n",
@@ -28,6 +30,7 @@
     "\n",
     "    # 提出データを格納するリスト\n",
     "    weighted_submissions = None\n",
+    "    simple_submissions = []\n",
     "    total_weight = 0\n",
     "    scores = []\n",
     "\n",
@@ -39,6 +42,7 @@
     "        if score:\n",
     "            score_value = float(score.group(1))\n",
     "            scores.append(score_value)\n",
+    "            simple_submissions.append(data)\n",
     "            if weighted_submissions is None:\n",
     "                weighted_submissions = data * score_value\n",
     "            else:\n",
@@ -55,9 +59,17 @@
     "    np.save(submission_file_path, avg_submission)\n",
     "    print(f\"加重平均された提出データ {avg_submission.shape} が {submission_file_path} に保存されました。\")\n",
     "\n",
-    "# save_folderのパスを指定\n",
+    "    avg_submission = np.mean(simple_submissions, axis=0)\n",
+    "    # 平均化された提出データを保存\n",
+    "    submission_file_path = os.path.join(save_folder, f\"submission_{avg_score:.5f}_mean.npy\")\n",
+    "    np.save(submission_file_path, avg_submission)\n",
+    "    print(f\"単純平均された提出データ {avg_submission.shape} が {submission_file_path} に保存されました。\")\n",
+    "\n",
+    "\n",
+    "weighted_submissions = False\n",
     "# save_folder = \"outputs/2024-07-14/01-30-09\"\n",
-    "save_folder = \"outputs/ensemble/test2\"\n",
+    "save_folder = \"outputs/ensemble/test3\"\n",
+    "# save_folder = \"outputs/2024-07-16/14-33-25\"\n",
     "weighted_average_submissions(save_folder)"
    ]
   }
