--- a/submit.ipynb
+++ b/submit.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "加重平均された提出データ (16432, 1854) が outputs/ensemble/test3\\submission_1.68484_weighted_avg.npy に保存されました。\n",
-      "単純平均された提出データ (16432, 1854) が outputs/ensemble/test3\\submission_1.68484_mean.npy に保存されました。\n"
+      "加重平均された提出データ (16432, 1854) が outputs/ensemble/test8\\submission_0.73734_weighted_avg.npy に保存されました。\n",
+      "単純平均された提出データ (16432, 1854) が outputs/ensemble/test8\\submission_0.73734_mean.npy に保存されました。\n"
      ]
     }
    ],
@@ -24,6 +24,7 @@
     "    # submission_*.npyファイルのパスを取得\n",
     "    # submission_files = glob.glob(os.path.join(save_folder, 'submission_*_fold*_of*.npy'))\n",
     "    submission_files = glob.glob(os.path.join(save_folder, 'submission_*_fold*.npy'))\n",
+    "    # submission_files = glob.glob(os.path.join(save_folder, 'submission_*.npy'))\n",
     "    if not submission_files:\n",
     "        print(\"提出ファイルが見つかりません。\")\n",
     "        return\n",
@@ -67,8 +68,8 @@
     "\n",
     "\n",
     "weighted_submissions = False\n",
-    "# save_folder = \"outputs/2024-07-14/01-30-09\"\n",
-    "save_folder = \"outputs/ensemble/test3\"\n",
+    "save_folder = \"outputs/2024-07-14/01-30-09\"\n",
+    "save_folder = \"outputs/ensemble/test8\"\n",
     "# save_folder = \"outputs/2024-07-16/14-33-25\"\n",
     "weighted_average_submissions(save_folder)"
    ]
